--- a/index.html
+++ b/index.html
@@ -43,5 +43,10 @@
 </div>
     <!-- /.navbar -->
 </header>
+<main>
+    <div class="main-image">
+        <img src="img/home.png" alt="">
+    </div>
+</main>
 </body>
 </html>
